--- a/src/Generation/css/index.scss
+++ b/src/Generation/css/index.scss
@@ -54,6 +54,18 @@
                             background-color: gray;
                         }
                     }
+
+                    .check-gen-input{
+                        margin-top: 1em;
+                        margin-left: .5em;
+                        color: black;
+                        font-weight: lighter;
+
+                        &.input-warning{
+                            color: red;
+                            font-weight: bold;
+                        }
+                    }
                 }
             }
         }
