--- a/src/Battle/css/index.scss
+++ b/src/Battle/css/index.scss
@@ -1,89 +1,116 @@
 #root{
-    .wrap-feed{
-        display: flex;
-        flex-direction: row;
-        width: 90vw;
-        height: 30vh;
-        margin-top: 60px;
+    .battle-feed{
+        width: 100%;
+        padding: 0 2em;
+        box-sizing: border-box;
 
-        .section-character{
+        .wrap-feed{
+            width: 100%;
+            height: 100%;
+            margin-top: 2em;
             display: flex;
-            flex-direction: column;
-            flex: 1;
-            justify-content:space-between;
+            flex-direction: row;
+            justify-content: stretch;
 
-            &>*{
-                margin: 1em ;
-                min-height: 30px;
-            }
-            .input-name{
-                input[type=text]{
-                    margin-left: .5em;
-                    width: 7em;
-                    margin-right: 1em;
-                    border: 0;
-                    border-bottom: 1px solid gray;
-                    outline: none;
-                    font-size: 1em;
-                }
-      
-                .btn-submit{
-                    height: 100%;
-                    background-color: black;
-                    border: 0;
-                    font-size: 1em;
-                    color: azure;
+            .feed-left{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                width: 100%;
+                border-right: 1.7px solid #BBB;
 
-                    &:hover{
-                        cursor: pointer;
-                        background-color: gray;
+                .feed-items{
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    height: 2em;
+                    gap: .5em;
+
+                    .txt-label{
+
+                    }
+
+                    &>input{
+                        margin: 0;
+                    }
+
+                    &>.btn-submit{
+                        display: flex;
+                        align-items: center;
+                        height: 1.5em;
+                        margin-left: .5em;
+                        color: white;
+                        font-size: 1em;
+                        line-height: 0;
+                        padding: .3em;
+                        background-color: black;    
+                        transition: all .2s ease;
+                        border: 0;
+
+                        &:hover{
+                            cursor: pointer;
+                            color: black;
+                            background-color: #BBB;
+                        }
                     }
                 }
             }
 
-            .output-info{
+            .feed-right{
                 display: flex;
-                flex-direction: row;
-                .info-custom{
-                margin-left: .5em;
+                flex-direction: column;
+                justify-content: space-between;
+                width: 100%;
+                height: 100%;
+                margin-left: 1em;
+                box-sizing: border-box;
 
+                .feed-items-center{
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    justify-content: center;
+                    min-width: 50%;
+                    height: 2em;
+                    gap: .5em;
+                    font-size: 1.5em;
+
+                    .img-label{
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        height: 100%;
+
+                        &>img{
+                            height: 1em;
+                        }
+                    }
+                    .battle-result{
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        height: 100%;
+                        line-height: 0;
+                    }
                 }
+
             }
         }
 
-        .section-result{
+        .feed-bottom{
+            width: 100%;
+            height: 1em;
+            margin-top: 1em;
             display: flex;
-            flex-direction: column;
-            flex: 1;
-            justify-content:space-between;
-            border-left: 1px solid black;
+            flex-direction: row;
+            align-content: center;
+            justify-content: flex-end;
+            color: #BBB;
 
-            &>*{
-                margin: 1em;
-            }
-
-            .result-inner{
+            .roll-date{
                 display: flex;
-                flex-direction: row;
                 align-items: center;
-
-                &>img{
-                    width: 1em;
-                    height: 1em;
-                } 
-                .result-custom{
-                    margin-left: 1em;
-
-                }
-
-                .result-result {
-                    display: flex;
-                    justify-content: center;
-                    align-content: center;
-                    margin: 0;
-                    color: green;
-                    font-size: 2rem;
-                }
+                min-width: 5em;
             }
         }
     }
