--- a/src/Generation/css/index.scss
+++ b/src/Generation/css/index.scss
@@ -1,86 +1,134 @@
 #root{
-   .wrap-feed{
-        display: flex;
-        flex-direction: row;
-        width: 90vw;
-        height: 30vh;
-        margin-top: 60px;
+    .gen-feed{
+        width: 100%;
+        padding: 0 2em;
+        box-sizing: border-box;
 
-        .section-generaiton{
+        .wrap-feed{
+            width: 100%;
+            height: 100%;
+            margin-top: 2em;
             display: flex;
-            flex-direction: column;
-            flex: 1;
-            justify-content:space-between;
-            
-            &>*{
-                margin: 1em;
-                min-height: 30px;
-            }
+            flex-direction: row;
+            justify-content: stretch;
 
-            .input-name{
-                input{
 
-                }
-            }
-
-            .input-nickname{
+            .feed-left{
                 display: flex;
-                flex-direction: row;
-                align-items: flex-start;
+                flex-direction: column;
+                justify-content: space-between;
+                width: 100%;
+                border-right: 1.7px solid #BBB;
+                gap: .5em;
+                height: 100%;
 
-                .label-nickname{
-                    position: relative;
-                    top: .5em;
-                }
-                .inner-nickname{
+                .feed-items{
+                    width: 100%;
                     display: flex;
-                    flex-direction: column;
+                    flex-direction: row;
+                    align-items: flex-start;
 
-                    &>input{
-                        margin-bottom: .3em;
+                    .txt-label{
+                        display: flex;
+                        align-items: center;
+                        height: 2em;
+                        
                     }
 
-                    .btn-submit{
-                        margin: 1em 0em 0em .5em;
-                        padding: .3em;
-                        width: 7em;
-                        font-size: 1em;
-                        background-color: black;
-                        border: 0;
-                        color: azure;
+                    .input-field{
+                        display: flex;
+                        flex-direction: column;
+                        gap: .3em;
+                        width: 50%;
+
+                        &>*{
+                            height: 2em;
+                            width: 100%;
+                            padding: 0;
+                            margin: 0;
+                            margin-left: .5em;
+                        }
+
+                        &>input{
+
+                        }
+                        .check-gen-input{
+                            display: flex;
+                            align-items: center;
+                            line-height: 0;
+                            color: #666;
+                            font-weight: 300;
+                            transition: all 0.1s linear;
+
+                            &.input-warning{
+                            font-weight: 500;
+                                color: red;
+                            }
+                        }
+
+                        &>.btn-submit{
+                            border: 0;
+                            margin-top: 1em;
+                            background-color: black;
+                            color: white;
+                            font-size: 1em;
+                            box-sizing:border-box;
+                            transition: all 0.2s linear;
+
+                            &:hover{
+                                cursor: pointer;
+                                color: black;
+                                background-color: #BBB;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .feed-right{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                width: 100%;
+                height: 100%;
+                margin-left: 1em;
+                box-sizing: border-box;
+
+                &>.feed-items{
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
     
-                        &:hover{
-                            cursor: pointer;
-                            background-color: gray;
-                        }
+                    .txt-label{
+                        display: flex;
+                        align-items: center;
+                        height: 2em;
+                        
                     }
 
-                    .check-gen-input{
-                        margin-top: 1em;
+                    .gen-result{
                         margin-left: .5em;
-                        color: black;
-                        font-weight: lighter;
-
-                        &.input-warning{
-                            color: red;
-                            font-weight: bold;
-                        }
                     }
                 }
             }
         }
 
-        .section-result{
+        .feed-bottom{
+            width: 100%;
+            height: 1em;
+            margin-top: 1em;
+            display: flex;
+            flex-direction: row;
+            align-content: center;
+            justify-content: flex-end;
+            color: #BBB;
 
-            &>*{
-                margin: 1em;
-                min-height: 30px;
-            }
-            .result-inner{
-                .result-custom{
-
-                }
+            .roll-date{
+                display: flex;
+                align-items: center;
+                min-width: 5em;
             }
         }
-   }
+    }
 }
