--- a/src/Header/css/index.scss
+++ b/src/Header/css/index.scss
@@ -1,78 +1,175 @@
-#root{
+#root {
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    flex-direction: column;
+    //justify-content: center;
     font-size: 24px;
     line-height: 0;
     width: 100vw;
     height: 100vh; 
 
     .header{
-        height: 60px;
-        position: absolute;
+        width: 100%;
+        height: 4em;
+        padding: .5em 2em;
+        box-sizing: border-box;
         display: flex;
+        flex-direction: row;
+        justify-content: space-between;
         align-items: center;
-        width: 90%;
-        top: 0;
-        border-bottom: 1px solid black;
+        border-bottom: 1.7px solid #BBB;
 
-        .wrap{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            min-width: 50%;
-            height: 90%;
-
+        .header-left{
+            height: 100%;
             .logo{
-                width: 200px;
+                height: 100%;
+                &>img{
+                    height: 100%;
+                    object-fit: contain;
+                }
 
             }
+        }
+
+        .header-middle{
+            height: 100%;
+            display: flex;
+            align-items: center;
+            
             .gnb{
-                .gnb-ul{
-                    position: relative;
+                display: flex;
+                align-items: center;
+                height: 100%;
+                list-style-type: none;
+                display: flex;
+                flex-direction: row;
+                gap: .5em;
+
+                &>li{
                     display: flex;
-                    flex-direction: row;
                     align-items: center;
-                    height: 100%;
-                    list-style-type: none;
-                    
-                    & a{
+                    padding-left: 0;
+                    color: black;
+                    height: 50%;
+                    padding: 0 .5em;
+                    border-radius: 1em;
+                    transition: all 0.2s linear;
+                    &>a{
                         color: inherit;
                         text-decoration: none;
                     }
 
-                    .gnb-li{
-                        padding: 10px;
-                        margin: 0 .5em;
-                        height: 100%;
-                        border-radius: 10px;
-
-                        &:hover{
-                            background-color: #e6e6e6 !important;
-                            color: black !important;
-                            cursor: pointer !important;
-                        }
-
-                        &.active{
-                            background-color: black;
-                            color: azure;
-                        }
+                    &.active{
+                        background-color: black;
+                        color: white;
                     }
 
-                    .gnb-battle{
-
-                    }
-
-                    .gnb-generation{
-
-                    }
-
-                    .gnb-history{
-
+                    &:hover{
+                        cursor: pointer;
+                        color: black;
+                        background-color: #e6e6e6;
                     }
                 }
             }
         }
+
+        .header-right{
+            display: flex;
+            flex-direction: row;
+            gap: 1em;
+            .icon-header-right{
+                &>img{
+                    width: 1.5em;
+                    height: 1.5em;
+                }
+            }
+            .user-info{
+
+            }
+
+            .all-menu{
+
+            }
+        }
     }
 }
+
+
+
+// #root{
+//     display: flex;
+//     justify-content: center;
+//     align-items: flex-start;
+//     font-size: 24px;
+//     line-height: 0;
+//     width: 100vw;
+//     height: 100vh; 
+
+//     .header{
+//         height: 60px;
+//         position: absolute;
+//         display: flex;
+//         align-items: center;
+//         width: 90%;
+//         top: 0;
+//         border-bottom: 1px solid black;
+
+//         .wrap{
+//             display: flex;
+//             flex-direction: row;
+//             justify-content: space-between;
+//             align-items: center;
+//             min-width: 50%;
+//             height: 90%;
+
+//             .logo{
+//                 width: 200px;
+
+//             }
+//             .gnb{
+//                 .gnb-ul{
+//                     position: relative;
+//                     display: flex;
+//                     flex-direction: row;
+//                     align-items: center;
+//                     height: 100%;
+//                     list-style-type: none;
+                    
+//                     & a{
+//                         color: inherit;
+//                         text-decoration: none;
+//                     }
+
+//                     .gnb-li{
+//                         padding: 10px;
+//                         margin: 0 .5em;
+//                         height: 100%;
+//                         border-radius: 10px;
+
+//                         &:hover{
+//                             background-color: #e6e6e6 !important;
+//                             color: black !important;
+//                             cursor: pointer !important;
+//                         }
+
+//                         &.active{
+//                             background-color: black;
+//                             color: azure;
+//                         }
+//                     }
+
+//                     .gnb-battle{
+
+//                     }
+
+//                     .gnb-generation{
+
+//                     }
+
+//                     .gnb-history{
+
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
